Added the possibility to spawn a fixed goal ( defined in the env.yaml configuration file )

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -13,6 +13,8 @@ environment:
     y_min: -2.0
     y_max: 2.0
 
+
+
 # --- Robot Physical Limits ---
 robot:
   radius: 0.3       # Radius of the robot (meters) for collision checking
@@ -20,6 +22,8 @@ robot:
   v_max: 1.0        # Maximum linear velocity (m/s)
   w_min: -1.5       # Minimum angular velocity (rad/s)
   w_max: 1.5        # Maximum angular velocity (rad/s)
+
+
 
 # --- Obstacle Configuration ---
 obstacles:
@@ -48,10 +52,23 @@ obstacles:
     # Custom Complex Shape (L-shape)
     - ['polygon', [[-0.5, 1.5], [-1.5, 1.5], [-1.5, 1.0], [-1.0, 1.0], [-1.0, 0.5], [-0.5, 0.5]]]
 
+
+
 # --- Goal Configuration ---
 goal:
+  # Mode: 'random' or 'fixed'
+  # If 'random': Goal are spawned randomly within world_bounds
+  # If 'fixed': Obstacles are spawned at the coordinates listed below
+  spawn_mode: "fixed"
+
   threshold: 0.2    # Distance to target to consider "reached" (meters)
   spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
+
+  # Define fixed goal.
+  # Format: [center_x, center_y, theta]
+  fixed_goal: [3, 3, 0.0]
+
+
 
 # --- Reward Function Weights ---
 rewards:
