--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -48,7 +48,7 @@ obstacles:
     # Standard Rectangle
     - ['rectangle', 2.5, -1.0, [1.0, 0.5]]
     # Custom Polygon (Triangle)
-    - ['polygon', [[3.0, 2.0], [3.5, 2.5], [4.0, 2.0]]]
+    # - ['polygon', [[3.0, 2.0], [3.5, 2.5], [4.0, 2.0]]]
     # Custom Complex Shape (L-shape)
     - ['polygon', [[-0.5, 1.5], [-1.5, 1.5], [-1.5, 1.0], [-1.0, 1.0], [-1.0, 0.5], [-0.5, 0.5]]]
 
