--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -29,10 +29,11 @@ robot:
 obstacles:
   # Mode: 'random' or 'fixed'
   # If 'random': Obstacles are spawned randomly within world_bounds
+  spawn_mode: "random" 
   # If 'fixed': Obstacles are spawned at the coordinates listed below
-  spawn_mode: "fixed" 
+  # spawn_mode: "fixed" 
   
-  n_obstacles: 3        # Number of obstacles to spawn (ignored if fixed)
+  n_obstacles: 0        # Number of obstacles to spawn (ignored if fixed)
   lidar_range: 3.0      # Max detection range for the robot's sensors
   min_clearance: 0.5    # Min distance between obstacles and robot/goal at spawn
   
@@ -58,10 +59,11 @@ obstacles:
 goal:
   # Mode: 'random' or 'fixed'
   # If 'random': Goal are spawned randomly within world_bounds
+  spawn_mode: "random" 
   # If 'fixed': Obstacles are spawned at the coordinates listed below
-  spawn_mode: "fixed"
+  # spawn_mode: "fixed"
 
-  threshold: 0.2    # Distance to target to consider "reached" (meters)
+  threshold: 0.1    # Distance to target to consider "reached" (meters)
   spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
 
   # Define fixed goal.
