Updated the reward logic, moved in an unique script.
Update the training: new network tracking obs

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -63,7 +63,9 @@ goal:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed"
 
-  threshold: 0.1    # Distance to target to consider "reached" (meters)
+  dist_treshold: 0.1    # meters (e.g., 10cm)
+  angle_treshold: 0.2   # radians (approx 11 degrees)
+
   spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
 
   # Define fixed goal.
