Complete the first training with the updated observable

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -63,8 +63,8 @@ goal:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed"
 
-  dist_treshold: 0.1    # meters (e.g., 10cm)
-  angle_treshold: 0.2   # radians (approx 11 degrees)
+  dist_threshold: 0.1    # meters (e.g., 10cm)
+  angle_threshold: 0.2   # radians (approx 11 degrees)
 
   spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
 
