--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -8,8 +8,8 @@ environment:
   
   # Boundaries of the square world (meters)
   world_bounds:
-    x_min: 0.5
-    x_max: 3.5
+    x_min: -2.0
+    x_max: 2.0
     y_min: -2.0
     y_max: 2.0
 
@@ -18,10 +18,13 @@ environment:
 # --- Robot Physical Limits ---
 robot:
   radius: 0.3       # Radius of the robot (meters) for collision checking
-  v_min: 0.0        # Minimum linear velocity (m/s)
+  v_min: -0.2        # Minimum linear velocity (m/s) - small negative velocity for exiting blind spots
   v_max: 1.0        # Maximum linear velocity (m/s)
   w_min: -1.5       # Minimum angular velocity (rad/s)
   w_max: 1.5        # Maximum angular velocity (rad/s)
+
+  lidar_range: 3.0      # Max detection range for the robot's sensors
+  lidar_rays: 20        # Number of LiDAR fixed rays
 
 
 
@@ -34,7 +37,7 @@ obstacles:
   # spawn_mode: "fixed" 
   
   n_obstacles: 0        # Number of obstacles to spawn (ignored if fixed)
-  lidar_range: 3.0      # Max detection range for the robot's sensors
+  
   min_clearance: 0.5    # Min distance between obstacles and robot/goal at spawn
   
   # Define fixed obstacle.
