--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,10 @@ gymnasium       # OpenAI RL API
 numpy 
 opencv-python   # Used to render the enviroment 
 PyYAML
+torch
+matplot
+pandas
+seaborn
+scipy
+tabulate
+imageio[ffmpeg]
