training without obstacles: 90%

--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -66,6 +66,7 @@ goal:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed"
 
+  heading_threshold: 0.1
   threshold: 0.1    # Distance to target to consider "reached" (meters)
   spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
 
