--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -36,9 +36,9 @@ obstacles:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed" 
   
-  n_obstacles: 5        # Number of obstacles to spawn (ignored if fixed)
+  n_obstacles: 3       # Number of obstacles to spawn (ignored if fixed)
   
-  min_clearance: 1.5    # Min distance between obstacles and robot/goal at spawn
+  min_clearance: 2    # Min distance between obstacles and robot/goal at spawn
   
   # Define fixed obstacle.
   # Format: [type, center_x, center_y, parameters]
@@ -66,9 +66,10 @@ goal:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed"
 
-  heading_threshold: 0.1
-  threshold: 0.1    # Distance to target to consider "reached" (meters)
-  spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
+  dist_threshold: 0.1    # meters (e.g., 10cm)
+  angle_threshold: 0.2   # radians (approx 11 degrees)
+
+  spawn_margin: 0.2 # Margin from the world bounds in which the goal can spawn
 
   # Define fixed goal.
   # Format: [center_x, center_y, theta]
