--- a/configs/env.yaml
+++ b/configs/env.yaml
@@ -8,8 +8,8 @@ environment:
   
   # Boundaries of the square world (meters)
   world_bounds:
-    x_min: -3.5
-    x_max: 3.5
+    x_min: -2.0
+    x_max: 2.0
     y_min: -2.0
     y_max: 2.0
 
@@ -18,10 +18,13 @@ environment:
 # --- Robot Physical Limits ---
 robot:
   radius: 0.3       # Radius of the robot (meters) for collision checking
-  v_min: 0.0        # Minimum linear velocity (m/s)
+  v_min: 0.0        # Minimum linear velocity (m/s) - small negative velocity for exiting blind spots
   v_max: 1.0        # Maximum linear velocity (m/s)
   w_min: -1.5       # Minimum angular velocity (rad/s)
   w_max: 1.5        # Maximum angular velocity (rad/s)
+
+  lidar_range: 3.0      # Max detection range for the robot's sensors
+  lidar_rays: 20        # Number of LiDAR fixed rays
 
 
 
@@ -33,9 +36,8 @@ obstacles:
   # If 'fixed': Obstacles are spawned at the coordinates listed below
   # spawn_mode: "fixed" 
   
-  n_obstacles: 4        # Number of obstacles to spawn (ignored if fixed)
-  lidar_range: 3.0      # Max detection range for the robot's sensors
-  min_clearance: 0.5    # Min distance between obstacles and robot/goal at spawn
+  n_obstacles: 3       # Number of obstacles to spawn (ignored if fixed)
+  min_clearance: 1    # Min distance between obstacles and robot/goal at spawn
   
   # Define fixed obstacle.
   # Format: [type, center_x, center_y, parameters]
@@ -66,7 +68,7 @@ goal:
   dist_threshold: 0.1    # meters (e.g., 10cm)
   angle_threshold: 0.2   # radians (approx 11 degrees)
 
-  spawn_margin: 0.5 # Margin from the world bounds in which the goal can spawn
+  spawn_margin: 0.2 # Margin from the world bounds in which the goal can spawn
 
   # Define fixed goal.
   # Format: [center_x, center_y, theta]
